<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.asteroides.Asteroides" >

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"       
        android:text="@string/tituloAplicacion"
        android:textAlignment="center"
        android:textSize="20dp" />

    <Button
        android:id="@+id/btnJugar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Jugar"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btnConfigurar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Configurar"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btnAcercaDe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Acercade"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btnSalir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Salir"
        android:textAllCaps="false" />

    <android.gesture.GestureOverlayView
        android:id="@+id/gestures"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gestureStrokeType="multiple"
        android:fadeOffset="800">
    </android.gesture.GestureOverlayView>

</LinearLayout>
